[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/Art/small_orc.png" type="Texture" id=1]
[ext_resource path="res://Assets/Art/small_goblin.png" type="Texture" id=2]
[ext_resource path="res://Assets/Art/small_fairy.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Enemy.gd" type="Script" id=4]
[ext_resource path="res://Fonts/Untitled Roguelike.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Scenes/EnemyTween.gd" type="Script" id=6]
[ext_resource path="res://Background.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="DynamicFont" id=2]
size = 10
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "orc",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "goblin",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "fairy",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16, 16 )

[node name="Enemy" type="Node2D"]
script = ExtResource( 4 )

[node name="EnemyArea" type="Area2D" parent="."]

[node name="EnemyName" type="Label" parent="EnemyArea"]
margin_left = -8.0
margin_top = -8.0
margin_right = 40.0
margin_bottom = 6.0
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
text = "Tinkle"
align = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemySprite" type="AnimatedSprite" parent="EnemyArea"]
frames = SubResource( 3 )
animation = "fairy"
centered = false

[node name="EnemyCollisionShape" type="CollisionShape2D" parent="EnemyArea"]
position = Vector2( 16, 16 )
shape = SubResource( 4 )

[node name="EnemyTween" type="Tween" parent="."]
playback_speed = 5.0
playback/speed = 5.0
script = ExtResource( 6 )

[node name="Light2D" type="Light2D" parent="."]
texture = ExtResource( 7 )
texture_scale = 50.0
color = Color( 0.937255, 0.729412, 0.172549, 1 )
energy = 0.25
[connection signal="tween_completed" from="EnemyTween" to="." method="_on_EnemyTween_tween_completed"]
